tests/passing/type_never.tails
foreign:
  func abort() -> never

func a() -> never:
  unsafe: abort()

func tests() -> unit:
  a()
