tests/failing/declare_foreign_function_redefine.tails
foreign:
  func printf(fmt: str, ...)
  func printf(fmt: str, ...)

func tests() -> unit:
  pass
